[project]
name = "langgraph-udemy-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langgraph>=0.3.2",
    "notebook>=7.3.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
